service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mywebapp-service
spec:
  selector:
    app: mywebapp
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 80
      nodePort: 30008
  type: NodePort
