route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: mywebapp-route
spec:
  to:
    kind: Service
    name: mywebapp-service
  port:
    targetPort: 5000
  tls:
    termination: edge
